--- a/CSS/style.css
+++ b/CSS/style.css
@@ -73,6 +73,18 @@ a {
     height: 100%;
     width: 50%;;
 }   
+.spikes {
+    position: relative;
+}
+.spikes::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    width: 100%;
+    height: 30px;
+    background:linear-gradient(135deg , var(--section-color) 25% , transparent 25% ) , linear-gradient(225deg , var(--section-color) 25% , transparent 25% );
+    background-size: 30px 30px;
+}
 /* End Global R.main-naves */
 /* Start ScrollBar */
 ::-webkit-scrollbar {
@@ -1177,8 +1189,7 @@ header .container .main-nav .mega-menu .links a i{
     position: absolute;
     left:-100%;
     top: 0;
-    background-color: #000;
-    opacity: .2;
+    background-color: #f6f6f6;
     transition: var(--transition-time);
     z-index: -2;
 }
@@ -1189,8 +1200,7 @@ header .container .main-nav .mega-menu .links a i{
     position: absolute;
     right:-100%;
     bottom: 0;
-    background-color: #000;
-    opacity: .2;
+    background-color: #f6f6f6;
     transition: var(--transition-time);
     z-index: -2;
 }
@@ -1526,6 +1536,7 @@ header .container .main-nav .mega-menu .links a i{
     caret-color: var(--main-color);
 }
 .discount .form form textarea {
+    resize: none;
     padding:15px 40px;
 }
 .discount .form form input:hover , 
@@ -1712,10 +1723,10 @@ footer .end {
     }
 }
 @keyframes change-background {
-    0% , 50% {
+    0% , 100% {
         background-image: url(../imgs/discount-background1.jpg);
     }
-    100% {
+    50% {
         background-image: url(../imgs/discount-background2.jpg);
     }
 }
